<resources>
    <string name="app_name">Dyerest</string>
    <string name="date_created">Created On:</string>
    <string name="button_go">GO!</string>
    <string name="view_item">View</string>
    <string name="new_workout">New Workout</string>
    <string name="new_workout_hint">Enter name</string>
    <string name="name">Name</string>
    <string name="add_day">Add Day</string>
    <string name="start_workout">Launch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading_lifting_exercise">Lifting</string>
    <string name="heading_cardio_exercise">Cardio</string>
    <string name="no_days">No workout days yet. Add them from the menu.</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="add_field">Add Field</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="remove_exercise">Remove</string>
    <string name="delete_item">Del</string>
    <string name="confirm_remove">Remove Item?</string>
    <string name="edit_guide">Exercise Guide</string>
    <string name="add_link">Add Link</string>
    <string name="view_link">View Link</string>
    <string name="edit_image">Edit Image</string>
    <string name="new_comment">New Comment</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_exercises">No toDeleteExercises yet. Add them from the edit button.</string>
    <string name="edit_all_exercises">Edit All Exercises</string>
    <string name="unicode_horizontal_ellipsis"><![CDATA[&#8230;]]></string>
    <string name="lifting_exercise_field_tip">For Lifting exercises, each field will be added to each set. By default, the max sets will be set to 1</string>
    <string name="max_sets">Max Sets</string>
    <string name="view_comments">View Comments</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_sequence">Edit Sequence</string>
    <string name="edit_exercises">Edit Exercises</string>
    <string name="new_day_name">New Day Name</string>
    <string name="view_history">View History</string>
    <string name="end_workout">End Workout?</string>
    <string name="workout_id_key">com.dhavalanjaria.dyerest.WorkoutId</string>
    <string name="workout_day_key">com.dhavalanjaria.dyerest.WorkoutDay</string>
    <string name="preference_file_key">com.dhavalanjaria.dyerest.PREFERENCE_FILE_KEY</string>
</resources>
