<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ExerciseGuideFragment"
    >

    <ImageView
        android:id="@+id/exercise_guide_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:src="@android:drawable/picture_frame"/>


    <Button
        android:id="@+id/edit_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/edit_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/view_link"
            android:layout_margin="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableStart="@drawable/ic_view_link"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/add_link" />

    </LinearLayout>
</LinearLayout>
